[gd_scene load_steps=6 format=3 uid="uid://dtnrjguhery8r"]

[ext_resource type="Script" path="res://addons/explore-editor-theme/gui/tabs/ExplorerTabIcons.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ds8c70l2dnpy8" path="res://addons/explore-editor-theme/gui/widgets/CodePreview.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://c6mun6p3lk1k6" path="res://addons/explore-editor-theme/gui/widgets/TextFilter.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://bg7phy5jdt0wl" path="res://addons/explore-editor-theme/gui/widgets/TypeSelector.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://dwsc0c4b3wt28" path="res://addons/explore-editor-theme/gui/widgets/IconExporter.tscn" id="6"]

[node name="Icons" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Layout" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Toolbar" type="HBoxContainer" parent="Layout"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TextFilter" parent="Layout/Toolbar" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2

[node name="TypeSelector" parent="Layout/Toolbar" instance=ExtResource("4")]
unique_name_in_owner = true
layout_mode = 2

[node name="Contents" type="HBoxContainer" parent="Layout"]
layout_mode = 2
size_flags_vertical = 3

[node name="IconList" type="ItemList" parent="Layout/Contents"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_columns = 0
same_column_width = true
fixed_column_width = 220
fixed_icon_size = Vector2i(16, 16)

[node name="Sidebar" type="MarginContainer" parent="Layout/Contents"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 8

[node name="IconDetails" type="VBoxContainer" parent="Layout/Contents/Sidebar"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
theme_override_constants/separation = 12

[node name="IconPreview" type="TextureRect" parent="Layout/Contents/Sidebar/IconDetails"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="IconPreviewInfo" type="Label" parent="Layout/Contents/Sidebar/IconDetails/IconPreview"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 14.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.784314)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1

[node name="IconName" type="Label" parent="Layout/Contents/Sidebar/IconDetails"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
autowrap_mode = 1

[node name="IconCode" parent="Layout/Contents/Sidebar/IconDetails" instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 2

[node name="IconExporter" parent="Layout/Contents/Sidebar/IconDetails" instance=ExtResource("6")]
unique_name_in_owner = true
layout_mode = 2
